--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "eslint-complexity-checking",
   "version": "1.0.0",
   "description": "demonstrate eslint file complexity checking",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . -c eslint.json"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,13 @@
   "bugs": {
     "url": "https://github.com/mlennox/eslint-complexity-checking/issues"
   },
-  "homepage": "https://github.com/mlennox/eslint-complexity-checking#readme"
+  "homepage": "https://github.com/mlennox/eslint-complexity-checking#readme",
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "5.13.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-prettier": "3.0.1",
+    "prettier": "1.16.3"
+  }
 }
