--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "demonstrate eslint file complexity checking",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . -c eslint.json"
+    "lint": "eslint .",
+    "lint:complex": "eslint . -c eslint.complexity.config.js -f ./formatter/sorted.js"
   },
   "repository": {
     "type": "git",
