fixed the formatter config, added error rules, suppressed node failure message

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
-    "lint:sorted": "eslint . -c ./formatter/eslint.complexity.config.js -f ./formatter/sorted.js"
+    "lint:sorted": "eslint  . -c ./formatter/eslint.complexity.config.js -f ./formatter/sorted.js || true"
   },
   "repository": {
     "type": "git",
